--- a/pytest_benchmark.ini
+++ b/pytest_benchmark.ini
@@ -1,12 +1,12 @@
 [pytest]
 pythonpath = src
-addopts = --tb=native --capture=tee-sys -l -vvv --doctest-modules --show-capture=log --cov=freeiam
-timeout = 30
+addopts = --tb=native --capture=tee-sys -l -vvv --doctest-modules --show-capture=log --no-cov
+timeout = 300
 markers =
     tls: mark test as requiring LDAP TLS readiness/wait
 log_cli = false
-log_level = DEBUG
+log_level = WARNING
 log_format = %(asctime)s [%(levelname)s] %(name)s: %(message)s
 log_date_format = %H:%M:%S
-log_cli_level = DEBUG
+log_cli_level = WARNING
 log_auto_indent = true
