--- a/tox.ini
+++ b/tox.ini
@@ -36,13 +36,4 @@ commands = twine upload dist/*
 
 [testenv:changelog]
 deps = python-semantic-release
-commands = semantic-release version
-
-[testenv:release]
-deps = python-semantic-release
-commands = semantic-release publish
-passenv =
-    TWINE_USERNAME
-    TWINE_PASSWORD
-    GH_TOKEN
-    GITLAB_TOKEN
+commands = semantic-release version --no-push --skip-build --changelog
