--- a/pyproject.toml
+++ b/pyproject.toml
@@ -249,6 +249,11 @@ match = "(main|master)"
 prerelease_token = "rc"
 prerelease = false
 
+[tool.semantic_release.branches.dev]
+match = "(dev|feat/*)"
+prerelease_token = "rc"
+prerelease = false
+
 [tool.semantic_release.changelog]
 exclude_commit_patterns = [
     '''chore(?:\([^)]*?\))?: .+''',
