docs(ldap): Add section explaning how to handle LDAP Distinguished Names correctly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
         - --autofix
         - --no-ensure-ascii
     - id: trailing-whitespace
+      exclude: "^docs/.*[.]rst$|^.*[.]md$"
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
