--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ description = "FreeIAM is a free and flexible Identity and Access Management sol
 authors = [{ name = "Florian Best", email="contact@freeiam.org" }]
 version = "0.3.0"
 readme = "README.md"
+project.license-expression = "MIT OR Apache-2.0"
 requires-python = ">=3.11"
 dependencies = [
     "python-ldap",
