ci(pre-commit): show diff of ruff format

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
         alias: "ruff"
       - id: ruff-format
         alias: "ruff-format-check"
-        args: ["--check"]
+        args: ["--check", "--diff"]
       - id: ruff-check
         alias: "ruff-fix"
         stages: [ manual ]
