--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ skip_empty = true
 exclude_lines = [
     "pragma: no cover",
     "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "if typing.TYPE_CHECKING:",
+    "@overload",
 ]
 
 omit = [
