--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,3 +80,8 @@ repos:
       - id: conventional-pre-commit
         stages: [ commit-msg ]
         args: ["--strict"]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.18.2
+    hooks:
+      - id: mypy
+        additional_dependencies: ["lark"]
